forge_add_simd_runtime_test(test_simd_core test_simd_core.cpp)

forge_add_simd_runtime_test(test_simd_expansion test_simd_expansion.cpp)
target_compile_definitions(test_simd_expansion PRIVATE FORGE_SIMD_ENABLE_CHUNK_CAT_PERMUTE_TESTS)

forge_add_simd_runtime_test(test_simd_reductions test_simd_reductions.cpp)

add_executable(test_simd_abi "${FORGE_SIMD_RUNTIME_DIR}/test_simd_abi.cpp")
target_link_libraries(test_simd_abi PRIVATE gtest_main forge::forge)
target_include_directories(test_simd_abi PRIVATE "${FORGE_SIMD_SUPPORT_DIR}")
add_test(NAME simd_traits COMMAND test_simd_abi)

forge_add_simd_runtime_test(test_simd_mask test_simd_mask.cpp)

forge_add_simd_runtime_test(test_simd_memory_load_store test_simd_memory_load_store.cpp)
target_compile_definitions(test_simd_memory_load_store PRIVATE FORGE_SIMD_ENABLE_UNCHECKED_MEMORY_TESTS)
forge_add_simd_runtime_test(test_simd_memory_gather_scatter test_simd_memory_gather_scatter.cpp)
target_compile_definitions(test_simd_memory_gather_scatter PRIVATE FORGE_SIMD_ENABLE_UNCHECKED_MEMORY_TESTS)
forge_add_simd_runtime_test(test_simd_memory_supported_types test_simd_memory_supported_types.cpp)

forge_add_simd_runtime_test(test_simd_operators test_simd_operators.cpp)
forge_add_simd_runtime_test(test_simd_math test_simd_math.cpp)
forge_add_simd_runtime_test(test_simd_bit test_simd_bit.cpp)
forge_add_simd_runtime_test(test_simd_math_ext test_simd_math_ext.cpp)
forge_add_simd_runtime_test(test_simd_math_special test_simd_math_special.cpp)
forge_add_simd_runtime_test(test_simd_complex test_simd_complex.cpp)
